# pufferstarter-cli

./: .gitignore  .gitpod.yml  CMakeLists.txt  LICENSE  LICENSES  README.md  TODO.md  build.ps1  build.sh
docs/: README.md  _coverpage.md  _sidebar.md  configuration-file.md  index.html
docs/Basics/: FeatureTour.md  FeatureTourInteractive.md  Installation.md  featuretournoint.md  starting.md
docs/Building/: Linux_Unix.md  WIndows.md  binst.md
docs/Configuration/: configuration-file.md  getcreds.md
docs/Usage/: interactive.md  noninteractive.md
src/: auth_menu.h  change_status.h  get_server_info.h  http_request.h  list_servers.h  load_config_file.h  main.cpp  menu_and_authenticaton.h  print_server_info.h  see-console.h
